[package]
name = "gwar"
version = "0.1.0"
authors = ["Matthew Dillon <matthewrdillon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.1"
toml = "0.5"
